Updated Chat api endpoint to accept product_ids or api_ids. Generical chat doesn't default to any product now.
