# infra/api-management/openapi-specs/Swagger API.openapi.yaml
@@ -1,12 +1,12 @@
 openapi: 3.0.1
 info:
-  title: Swagger API
+  title: swagger-api
   description: Exposes the OpenAPI spec for an API Endpoint
   version: '1.0'
 servers:
   - url: https://apim-55vh-apichat.azure-api.net/docs
 paths:
-  '/docs/{api-id}/openapi':
+  '/apis/{api-id}':
     get:
       summary: OpenAPI Spec
       description: Returns the OpenAPI specification for a given api-id
@@ -18,10 +18,127 @@ paths:
           required: true
           schema:
             type: string
+        - name: export
+          in: query
+          description: Export the API as OpenAPI Spec
+          required: true
+          schema:
+            enum:
+              - true
+            type: boolean
+            default: true
+        - name: format
+          in: query
+          description: The format to export the API in.
+          required: true
+          schema:
+            enum:
+              - openapi
+            type: string
+            default: openapi
+        - name: api-version
+          in: query
+          description: Azure Management REST API version
+          schema:
+            enum:
+              - '2022-08-01'
+            type: string
+            default: '2022-08-01'
       responses:
         '200':
           description: OpenAPI spec in JSON or YAML format for a given API.
+  '/products/{product_id}/apis':
+    get:
+      summary: Product APIs
+      operationId: product-apis
+      parameters:
+        - name: product_id
+          in: path
+          description: ID of the Azure API Management Product
+          required: true
+          schema:
+            type: string
+        - name: api-version
+          in: query
+          description: Azure Management REST API version
+          required: true
+          schema:
+            enum:
+              - '2022-08-01'
+            type: string
+            default: '2022-08-01'
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/product-apis-response'
+              example:
+                value:
+                  - id: string
+                    type: string
+                    name: string
+                    properties:
+                      displayName: string
+                      apiRevision: string
+                      description: { }
+                      subscriptionRequired: true
+                      serviceUrl: string
+                      backendId: { }
+                      path: string
+                      protocols:
+                        - string
+                      authenticationSettings: { }
+                      subscriptionKeyParameterNames: { }
+                      isCurrent: true
+                count: 0
 components:
+  schemas:
+    product-apis-response:
+      type: object
+      properties:
+        value:
+          type: array
+          items:
+            required:
+              - id
+              - type
+              - name
+              - properties
+            type: object
+            properties:
+              id:
+                type: string
+              type:
+                type: string
+              name:
+                type: string
+              properties:
+                type: object
+                properties:
+                  displayName:
+                    type: string
+                  apiRevision:
+                    type: string
+                  description: { }
+                  subscriptionRequired:
+                    type: boolean
+                  serviceUrl:
+                    type: string
+                  backendId: { }
+                  path:
+                    type: string
+                  protocols:
+                    type: array
+                    items:
+                      type: string
+                  authenticationSettings: { }
+                  subscriptionKeyParameterNames: { }
+                  isCurrent:
+                    type: boolean
+        count:
+          type: integer
   securitySchemes:
     apiKeyHeader:
       type: apiKey
